# gami-iced

./: .gitignore  Cargo.toml  LICENCE  README.md
addon-steam/: Cargo.toml  kv.ts  mod.ts  package.json  pnpm-lock.yaml  schema.json  tsconfig.json  tsup.config.ts
addon-steam/src/: conf.rs  curl.rs  index.ts  lib.rs  local_scanner.rs  models.rs  response_handler.rs  store.rs  store_models.rs
addon-steam/src/kv/: lexer.rs
backend/: Cargo.toml
backend/src/: action_colors.rs  game_actions.rs  lib.rs  models.rs  plugin.rs  plugins.rs
backend/src/db/: game.rs  game_genres.rs  genre.rs  init.sql  mod.rs  ops.rs
backend/src/modules/: fs.rs  mod.rs  sdk.rs
big-picture/: Cargo.toml
big-picture/src/: inputs.rs  main.rs
big-picture/src/ui/widgets/: header.rs
desktop/: Cargo.toml
desktop/src/: app.rs  icons.rs  main.rs  models.rs  settings.rs
desktop/src/pages/: achievements.rs  achivements.rs  add_ons.rs  app_page.rs  counter.rs  library.rs  mod.rs  settings.rs  tools.rs
desktop/src/widgets/: library_table.rs  mod.rs  nav_view.rs  number_input.rs
sdk/: Cargo.toml  index.d.ts  mod.ts  package.json
sdk/src/: lib.rs  models.rs  plugin.rs
src/: main.rs
src/pages/: app_page.rs  counter.rs  library.rs  mod.rs
src/widgets/: app_page.rs  mod.rs  nav_view.rs
ui-shared/: Cargo.toml
ui-shared/src/: lib.rs
