[package]
name = "gami-addon-steam"
version = "0.1.0"
edition = "2021"

[lib]
name = "addon_steam"
crate-type = ["dylib"]
[dependencies]
async-recursion = "1.1.1"
async-stream = "0.3.6"
eyre = "0.6.12"
gami-sdk = { path = "../sdk" }
once_cell = "1.20.2"
tokio = { version = "1.41.1", features = ["full"] }
tokio-stream = "0.1.16"
tokio-test = "0.4.4"
log = "0.4.22"
open = "5.3.1"
