[package]
name = "gami-addon-steam"
version = "0.1.0"
edition = "2021"

[lib]
name = "addon_steam"
crate-type = ["dylib"]
[dependencies]
safer-ffi = { version = "0.1.13", features = ["alloc"] }
async-recursion = "1.1.1"
eyre = "0.6.12"
gami-sdk = { path = "../sdk" }
once_cell = "1.20.2"
tokio = { version = "1.41.1", features = ["macros", "fs", "io-util", "io-std", "rt", "rt-multi-thread"] }
tokio-test = "0.4.4"
tokio-stream = "0.1.16"
log = "0.4.22"
url = "2.5.4"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
chttp = "0.5.5"
async-stream = "0.3.6"
chrono = "0.4.39"
regex = "1.11.1"
