[package]
name = "gami-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = { version = "1.1.1", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros", "chrono"] }
chrono = "0.4.39"
log = "0.4.22"
open = "5.3.1"
rquickjs = { version = "0.8.1", features = ["array-buffer", "loader", "futures", "macro"] }
reqwest = "0.12.9"
dirs = "5.0.1"
tokio = "1.42.0"