[package]
name = "gami-big-picture"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13.1", features = [
    "svg",
    "tokio",
    "image",
    "lazy",
] }
gami-backend = { path = "../backend" }
gami-sdk = { path = "../sdk" }
log = "0.4.22"
tokio = "1.42.0"
env_logger = "0.11.5"