[package]
name = "gami-iced"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13.1", features = ["svg", "advanced", "tokio", "image"] }
iced_aw = { version = "0.11.0", default-features = false, features = ["context_menu"] }
open = "5.3.1"
gami-sdk = { path = "../sdk" }
gami-backend = { path = "../backend" }
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros"] }
env_logger = "0.11.5"
log = "0.4.22"
url = "2.5.4"
