[package]
name = "gami-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13.1", features = [
    "svg",
    "advanced",
    "tokio",
    "image",
    "lazy",
] }
iced_aw = { version = "0.11.0", default-features = false, features = [
    "context_menu",
    "tabs"
] }
gami-sdk = { path = "../sdk" }
gami-backend = { path = "../backend" }
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros"] }
env_logger = "0.11.5"
log = "0.4.22"
url = "2.5.4"
iced_table = "0.13.0"
serde_json = "1.0.133"
bitcode = "0.6.3"
urlencoding = "2.1.3"
chrono = "0.4.39"
safer-ffi = "0.1.13"
