[package]
name = "gami-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "6.0.0"
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
safer-ffi = { version = "0.1", features = ["dyn-traits", "alloc"] }
chrono = "0.4"
serde_json = "1.0"

[build-dependencies]
rustc_version = "0.4.1"
